# AnyAI

./: .editorconfig  .gitattributes  .gitignore  .prettierrc  ARCHITECTURE.md  CONTRIBUTING.md  DOCS.md  Justfile  NOTICE.md  PROGRESS.md  README.md  RELEASE.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
anyai/: README.md  uninstall.ps1  uninstall.sh
manifests/: default.json
providers/: preset-sources.json  preset.json
scripts/: bootstrap.ps1  bootstrap.sh  bump-version.sh  install.ps1  install.sh
sources/: index.json
src/: config.ts  conversations.ts  import-export.ts  main.ts  manifest.ts  model-lifecycle.ts  preload.ts  providers.ts  sources.ts  types.ts  update-state.svelte.ts  watcher.ts
src-tauri/: Cargo.toml  Info.plist  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  api_models.rs  cli.rs  conversations.rs  frame_sink.rs  hardware.rs  main.rs  models.rs  ollama.rs  ort_install.rs  ort_setup.rs  preload.rs  process.rs  purge.rs  remote_ui.rs  resolver.rs  self_update.rs  transcribe.rs  usage.rs  watcher.rs  windows.rs
src-tauri/src/asr/: mod.rs  moonshine.rs  parakeet.rs
src-tauri/src/diarize/: cluster.rs  embedder.rs  fbank.rs  mod.rs  segmenter.rs
src-tauri/src/remote_ui/: index.html
src/ui/: App.svelte  Chat.svelte  ConflictModal.svelte  DownloadOverlay.svelte  FirstRun.svelte  ModeBar.svelte  ModelStatus.svelte  ProviderPanel.svelte  SettingsPanel.svelte  Sidebar.svelte  StatusBar.svelte  TranscribeView.svelte  chat-slot.svelte.ts  scroll-affordance.ts  stick-to-bottom.ts  transcribe-state.svelte.ts
src/ui/settings/: FamiliesSection.svelte  FamilyDetail.svelte  HardwareSection.svelte  ModelsSection.svelte  ProvidersSection.svelte  RemoteSection.svelte  StorageSection.svelte  TranscriptionSection.svelte  UpdatesSection.svelte  UsageSection.svelte
