[package]
name = "myownllm"
version = "0.1.20"
description = "MyOwnLLM — detect hardware, pick best local model, start it."
authors = []
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.88.0"

[[bin]]
name = "myownllm"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
dirs = "5"
which = "6"
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
bytes = "1"
dashmap = "6"
sha2 = "0.10"
hex = "0.4"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

# Local transcription stack. whisper-rs builds whisper.cpp from source via
# its build.rs (needs cmake + a C++ compiler at build time, no prebuilt
# binaries shipped). cpal handles cross-platform audio capture (CoreAudio /
# WASAPI / ALSA on macOS / Windows / Linux). All audio + ASR work runs
# in-process; nothing is sent over the network at runtime.
whisper-rs = { version = "0.13", default-features = false }
cpal = "0.15"
crossbeam-channel = "0.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
