[package]
name = "myownllm"
version = "0.2.4"
description = "MyOwnLLM — detect hardware, pick best local model, start it."
authors = []
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.88.0"

[[bin]]
name = "myownllm"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
dirs = "5"
which = "6"
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
bytes = "1"
dashmap = "6"
sha2 = "0.10"
hex = "0.4"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

# Local transcription stack. whisper-rs builds whisper.cpp from source via
# its build.rs (needs cmake + a C++ compiler at build time, no prebuilt
# binaries shipped). cpal handles cross-platform audio capture (CoreAudio /
# WASAPI / ALSA on macOS / Windows / Linux). All audio + ASR work runs
# in-process; nothing is sent over the network at runtime.
#
# GPU acceleration is wired up per-platform below. CPU-only whisper on a
# medium model takes 5–30 s per 5 s chunk on a typical laptop — slow enough
# that the live transcript runs many minutes behind realtime. Metal /
# Vulkan bring that down to ~realtime or faster on the same hardware. The
# feature falls back to CPU at runtime if the GPU isn't usable, so a build
# with these features set still works on machines without a discoverable
# accelerator.
cpal = "0.15"
crossbeam-channel = "0.5"
# Audio file decoding for the "Upload audio" flow. symphonia is pure Rust
# (no extra system deps) and handles wav / flac / mp3 / aac / ogg-vorbis /
# m4a out of the box — enough for the realistic set of files a user is
# likely to drop in.
symphonia = { version = "0.5", default-features = false, features = ["wav", "flac", "mp3", "aac", "isomp4", "ogg", "vorbis"] }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.13", default-features = false, features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { version = "0.13", default-features = false, features = ["vulkan"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
